syntax = "proto3";

package auctionSystem;
option go_package = "https://github.com/AlessandroBarbiero/Distributed-Auction-System;auctionSystem";

message BidRequest {
  int64 clientId = 1;
  int64 amount = 2;
}

message BidReply {
  int64 clientId = 1;
  bool success = 2;
  int64 bestBid = 3; // If it is not a success show the actual best bid
}

message ShowRequest {

}

message ShowReply {
  int64 currentBid = 1;
  int64 winningClientId = 2;
  string objectName = 3;    // The name of the object the auction is up to for
  int64 secondsTillEnd = 4;
}

service Auction {
  rpc bid(BidRequest) returns (BidReply);
  rpc show(ShowRequest) returns (ShowReply);
}
